# ChemicHAL

./: .gitignore  LICENSE  README.md  Study_plan_with_examples.docx  To_do_list.txt  chembl_split.pkl  lm_studio_mcp_config.json  main.py  pyproject.toml  test_counterfactuals.py
.github/: copilot-instructions.md
Publication/: figure_legends.docx
data/datasets/: chembl_activity_data_O00329_P42336.csv  chembl_activity_data_O00329_P48736.csv  chembl_activity_data_P14416_binary.csv  chembl_activity_data_P42336_P48736.csv
data/logs/: .current_session.json
data/models/: chembl_activity_data_O00329_P48736_scaffold_RFC.pkl
data/results/: chembl_activity_data_O00329_P48736_random_chembl_activity_data_O00329_P48736_random_RFC_test_metrics.pkl  chembl_activity_data_O00329_P48736_random_chembl_activity_data_O00329_P48736_random_RFC_test_predictions.pkl
data/splits/: chembl_activity_data_O00329_P48736_scaffold.pkl
ml_utils/: __init__.py  dataset.py  ml_utils.py
notebooks/: counterfactual_demo.ipynb  debugging_chemagent.ipynb  df_shap_sample.pkl  molanchor_generation_and_explanations.ipynb  shap_generation_and_explanations copy.ipynb  shap_generation_and_explanations.ipynb  shap_mapping.ipynb  test_edgeshaper.ipynb  test_xai_gnn_compatibility.ipynb
notebooks/debug_outputs/: shap_mapping_test.pkl  trained_model.pkl
prompts/: lm_studio_system_prompt.md  structured_system_prompt
scripts/: test_gnn.py
slides/: AI_Agent_Explainability.pptx  AI_Agent_Explainability_Alec_v2.pptx  figure_AI_agent_workflow.pptx  figures_AI_agent.pptx  figures_publication_portrait.pptx
splits/: chembl_activity_data_P14416_binary.pkl
src/chemagent/: session_utils.py
tests/: conftest.py  test_mcp.py
(+99 files in other folders)
